src/scss/main.scss
@import url('https://fonts.googleapis.com/css?family=Bungee');
@import 'node_modules/font-awesome/scss/font-awesome.scss';
@import 'node_modules/jquery.scrollbar/sass/jquery.scrollbar.scss';
@fa-font-path: "/fonts/";

// jquery.scrollbar overrides

.scrollbar-outer > .scroll-element {
    background: #f5f5f5;
}

.scrollbar-outer > .scroll-content.scroll-scrolly_visible {
    left: -20px;
    margin-left: 20px;
}

.scrollbar-outer > .scroll-element.scroll-y {
    border-left: 8px solid #f5f5f5;
}

.scrollbar--white {
    .scroll-element.scroll-y {
        border-left: 8px solid #fff;
    }

    .scroll-element {
        background: #fff;
    }
}

/*
 *  desktop styles
 *  ==================================
 *  1: global variables
 *  2: general styles
 *  small components
 *   - 3: buttons
 *   - 4: errors
 *   - 5: form fields
 *   - 6: loading icon
 *   - 7: rankings
 *
 *  bigger components
 *   - 8: centre list
 *   - 9: floating elements container
 *   - 10: lists
 *   - 11: map
 *   - 12: modals
 *   - 13: single centre view
 *   - 14: top bar
 *   - 15: user favourites
 *
 *  mobile styles
 *  ==================================
 *  1: buttons
 *  2: modals
 *  3: single centre view
 *  4: top bar
 *
 *  tablet styles
 *  ==================================
 *  1: top bar
 *
 *
 */

// 1: global variables

$primary-color: #ff2333;
$title-color: #ff2333;
$display-font-stack: Bungee, Helvetica, Arial, sans-serif;
$primary-font-stack: Roboto, Helvetica, Arial, sans-serif;
$background-color: #f5f5f5;
$container-radius: 3px;

$top-bar-color: #333;

$button-text: #fff;
$button-color: $primary-color;
$button-padding: .75rem 1rem;

$gold: #cfb53b;
$silver: #c0c0c0;
$bronze: #a57164;

// 2:general styles

* {
    box-sizing: border-box;
}

html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: $primary-font-stack;
}

ul {
    padding-left: 0;
    list-style-type: none;
}

main {
     flex: auto;
     position: relative;
}

body {
    display: flex;
    flex-direction: column;
}

.h-container {
    margin-left: auto;
    margin-right: auto;
    max-width: 950px;
}

// SMALL COMPONENTS

// 3: buttons

.c-button {
    color: $button-text;
    background-color: $button-color;
    text-decoration: none;
    padding: $button-padding;
    display: inline-block;
    cursor: pointer;
    transition: background-color .2s;

    &:hover {
        background-color: darken($button-color, 10);
    }

    &--small {
        padding: 0.5rem;
        font-size: 0.8rem;
    }

    &--rounded {
        border-radius: 3rem;
    }

    &--grey {
        background-color: #444;

        &:hover {
            background-color: darken(#444, 5);
        }
    }

    &--dark {
        background-color: darken($primary-color, 10);

        &:hover {
            background-color: darken($primary-color, 15);
        }
    }
}

// 4: errors

.c-error {
    &--favs {
        text-align: center;
        padding: 1rem;
    }

    &--app {
        text-align: center;
        position: absolute;
        top: 50%;
        left: 50%;
        z-index: 105;
        transform: translate(-50%, -50%);
        background-color: rgba(0,0,0,0.9);
        padding: 1rem;
        color: white;
    }
}

// 5: form fields

.c-input-group {
    display: flex;
    flex-direction: column;

    &__label {
        font-size:0.6rem;
        padding: 0.25rem 0.5rem;
        text-transform: uppercase;
    }
}

.c-input {
    font-family: $primary-font-stack;
    border: none;
    border-bottom: 0.5px solid #bbb;
    background: transparent;
    border-radius: 0;
}

// 6: loading icon

.c-loading-icon {
    width: 100px;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 100;
}

// 7: rankings

[class*="c-ranking--"] {
    color: darken($primary-color, 15);
}

.c-ranking {
    &--1 {
        color: $gold;
    }
    &--2 {
        color: $silver;
    }
    &--3 {
        color: $bronze;
    }
}


// BIGGER COMPONENTS

// 8: centre list

.c-centre-list {
    position: absolute;
    bottom: 1rem;
    left: 1rem;
    top: 1rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;
    padding: 0.5rem;

    > .c-centre-list__content {
        box-shadow: 0 0 10px rgba(0,0,0,0.4);
    }

    &__title {
        padding-left: .5rem;
    }

    &__list-item {
        padding: .5rem;
        border-bottom: .5px solid #ddd;
        cursor: pointer;
        display: flex;
        justify-content: space-between;

        &:last-child {
            border-bottom: none;
        }

        &:hover {
            background-color: rgba(0, 0, 0, .05);
        }
    }

    &__list {
        margin: 0;
    }

    &__ranks {
        flex: 1 0 auto;
        text-align: right;
        font-size: 0.7rem;
        line-height: 1rem;
        margin-left: 0.5rem;
    }

    &__name {
        flex: 0 1 auto;
    }

    &__button {
        pointer-events: all;
    }

    &__content {
        background-color: white;
        overflow-y: auto;
        pointer-events: all;
        max-width: 360px;
        margin-bottom: 1rem;
        border-radius: 0.5rem;
        border: 0.5rem solid white;
    }
}

// 9: floating elements container

.c-floating-elements {
    height: 100%;
    width: 100%;
    z-index: 101;
    position: absolute;
    pointer-events: none;
}

// 10: list

.c-list {
    display: flex;
    flex-direction: column;
    flex: 0 1 auto;
    min-height: 0;

    &__header {
        border-top-left-radius: $container-radius;
        border-top-right-radius: $container-radius;
        background-color: #eee;
        padding: 1rem;
    }

    &__main {
        overflow-y: auto;
    }

    &__item {
        border-top: 1px solid #ddd;
    }
}

// 11: map

.c-map {
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}
/* ... */

